# local_livestream

./: .gitignore  README.md  main.py  pyproject.toml
.entire/: settings.json
core/: __init__.py  asr.py  audio.py  gradio_server.py  realtime_transcriber.py
