[project]
name = "local-livestream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "flash-attn>=2.8.3",
    "gradio>=6.8.0",
    "numpy>=2.3.0",
    "qwen-asr>=0.0.6",
    "sounddevice>=0.5.2",
    "torch==2.8.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
